# url-previewer

./: .gitignore  README.md  compose.yaml
backend/: Dockerfile  pyproject.toml
backend/app/: blocked_sites.txt  main.py  schemas.py
backend/app/core/: settings.py
backend/app/services/: fetch.py  parse.py
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  main.tsx  types.ts
frontend/src/components/: PreviewCard.tsx  UrlForm.tsx
